# usu_spring_2025

./: README.md
Examples/AG_Probabilistic/: main.py
Homework/: 1.md  2.md
Homework/2/: .clang-format  .gitignore  CMakeLists.txt  CompilerWarnings.cmake  Makefile  README.md  auto.cpp  cli.cpp  main.cpp  plots.py  test.cpp
Homework/2/include/: concepts.hpp  dataset_generator.hpp  parse_args.hpp  solver_runner.hpp  solver_tester.hpp  solver_timer.hpp  strings.hpp  types.hpp
Homework/2/include/solvers/: parallel.hpp  serial.hpp  static_parallel.hpp  tree.hpp
Homework/2/include/solvers/detail/: bin_limits.hpp
Homework/2/results/: log.csv
Homework/2/solvers/: parallel.cpp  serial.cpp  static_parallel.cpp  tree.cpp
Homework/2/src/: parse_args.cpp
Notes/: feb_10.md  feb_11.md  feb_12.md  feb_13.md  feb_3.md  feb_4.md  feb_5.md  feb_7.md  jan_06.md  jan_08.md  jan_13.md  jan_14.md  jan_15.md  jan_16.md  jan_17.md  jan_21.md  jan_22.md  jan_23.md  jan_24.md  jan_27.md  jan_28.md  jan_29.md
Notes/Coursera/: introduction_to_model_checking.md
Notes/Textbook/: 10_secondary.md  12_primary.md  15_secondary.md
